[package]
name = "serial-rs-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive", "env"] }
flexi_logger = "0.25.5"
hex = "0.4.3"
log = "0.4.19"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serialport = "4.2.1"

[features]
default = ["async"]
async = []
